data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_451.wast
;; 2. **Loop with Conditional Branch to Unreachable**:    - Test a loop with a conditional `br_if` branch that mistakenly targets an `unreachable` instruction based on faulty conditions set within the loop.    - **Constraint**: This test verifies the handling of conditionals within loops and accurate evaluation to avoid unintentional `unreachable` code paths.    - **Unreachable Code Execution**: Validates that proper condition must be met before branching to an `unreachable` statement.

(assert_invalid
 (module
  (func $loop_with_unreachable
   (loop
    (br_if 1 (i32.const 0))
    (unreachable)
   )
  )
 )
 "type mismatch"
)